<resources>
    <!-- Strings related to create account -->
    <string name="already_registered">Already have an account? Sign in</string>
    <string name="prompt_name">Your Name</string>
    <string name="prompt_card_number">Your Card</string>
    <string name="action_register">Register</string>
    <string name="app_name">Javathon</string>
    <!-- Strings related to forgot account-->
    <string name="action_recover">Recover</string>
    <string name="remembered_password">Just remembered it?</string>
    <!-- Strings related to login -->

    <!-- Login activity-->
    <string name="app_decription">It\'s better!</string>
    <string name="prompt_login">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="different_login">or</string>
    <string name="error_invalid_email">Invalid Username</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Username or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>
    <string name="no_connection">Sorry, you not connected to the internet.</string>

    <string name="not_found">Не найдено</string>
    <string name="internet_error">Нет сети</string>
    <string name="debt">должен</string>
    <string name="send_money_button">Отправить деньги</string>
    <string name="add_product_button">Добавить продукт</string>
    <string name="hint_add_name">Добавьте навзание</string>
    <string name="hint_add_count">Добавьте количество</string>
    <string name="success">Успешно</string>
    <string name="example_search">Введите имя</string>
    <string name="button_search">Поиск</string>
    <string name="results">Результаты</string>
    <string name="added">Добавленные</string>
    <string name="enter_name">Введите название</string>
    <string name="done">Готово</string>


</resources>
